[metadata]
name = mac_apt
version = 0.0.1

[options]
packages =
    mac_apt
    mac_apt.plugins
install_requires =
    anytree
    biplist
    construct==2.9.45
    xlsxwriter
    plistutils
    kaitaistruct
    lz4
    pycryptodome
    cryptography
    pybindgen==0.21.0
    pillow
    pyliblzfse
    nska_deserialize
    pytsk3==20170802
    libvmdk-python==20181227
    pyaff4 @ https://github.com/ydkhatri/mac_apt/raw/master/other_dependencies/pyaff4-0.31-yk.zip
    libewf-python @ https://github.com/libyal/libewf-legacy/releases/download/20140808/libewf-20140808.tar.gz

[options.entry_points]
console_scripts =
    mac_apt = mac_apt.mac_apt:main
    mac_apt_artifact_only = mac_apt.mac_apt_artifact_only:main
